Fixing issue in dark mode

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -100,6 +100,7 @@ ul.itemsList {
   background-color: lemonchiffon;
   position: relative;
   border: none;
+  color: #000;
 }
 
 .card:before {
